        Fix for <rdar://problem/5183697>.

http://bugs.webkit.org/show_bug.cgi?id=13576

        Make sure verticalPositionHint is not called on an inline-block from
        content inside the inline-block (like text).

        Reviewed by olliej

        fast/inline-block/inline-block-vertical-align.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::verticalPositionHint):
        * rendering/RenderText.cpp:
        (WebCore::RenderText::verticalPositionHint):
        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::setFontFromControlSize):



Canonical link: https://commits.webkit.org/17810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21350 268f45cc-cd09-0410-ab3c-d52691b4dbfc